디자인 시안 웹 디자인화 완성

--- a/D_02/Practice/1200-12__grid-system/css/modules/grid-system.css
+++ b/D_02/Practice/1200-12__grid-system/css/modules/grid-system.css
@@ -93,6 +93,7 @@
 /* CSS3 Gradient Technique: Column Grid */
 .show-grid { position: relative; }
 .show-grid::before {
+  opacity: 0.4;
   content: '';
   position: absolute;
   top: 0;
