--- a/D_02/Practice/1200-12__grid-system/css/modules/typography.css
+++ b/D_02/Practice/1200-12__grid-system/css/modules/typography.css
@@ -18,8 +18,9 @@ h2, .h2 {
   margin-top: 0;
   margin-bottom: 21px;
   margin-bottom: 1.3125rem;
-  line-height: 24px;
-  line-height: 1.5rem;
+  line-height: 42px;
+  line-height: 2.625rem;
   font-size: 32px;
   font-size: 2rem;
+  font-weight: normal;
 }
