모듈 위치 변경

--- a/D_02/Practice/1200-12__grid-system/css/main.css
+++ b/D_02/Practice/1200-12__grid-system/css/main.css
@@ -1,16 +1,20 @@
 @charset "utf-8";
 
-/*
-├── css
-    ├── main.css
-    └── modules
-        ├── init.css
-        ├── typography.css
-        ├── grid-system.css
-        └── utils.css
+/* Modules
+    .
+    ├── css
+        ├── main.css
+        └── modules
+            ├── init.css
+            ├── typography.css
+            ├── grid-system.css
+            └── utils.css
 */
 @import "./modules/init.css";
 @import "./modules/typography.css";
 @import "./modules/grid-system.css";
 @import "./modules/utils.css";
-@import "./modules/page.css";
+
+
+/* Page Design */
+@import "./page.css";
