--- a/D_02/Practice/SassCompile/sass/_study.scss
+++ b/D_02/Practice/SassCompile/sass/_study.scss
@@ -1,12 +1,24 @@
-@charset "UTF-8";
-/* .container module */
+// Sass 변수
+$page-width: 1200px;
+$column-count: 12;
+$gutter-direction: 'split'; $gutter-width: 20px;
+$column-width: 100px;
+
+// 상태 변수
+$is-center-position: true;
+
+// .container module
 .container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  width: $page-width;
+  @if $is-center-position == true {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-/* .row module */
+
+// .row module
+
 .row::after,
 .clearfix::after {
   content: '';
@@ -14,16 +26,62 @@
   clear: both;
 }
 
+
 /* .col module */
-.col {
-  float: left;
-  width: 10%;
-  margin-left: 10px;
-  margin-right: 10px;
+@function de-unit($unit) {
+  @return $unit / ($unit * 0 + 1);
 }
 
+@function em($px) {
+  $px: de-unit($px);
+  @return ( $px / 16 ) * 1em;
+}
+
+%straight-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button {
+  @extend %straight-center;
+  border-radius: 4px;
+  background: #333333;
+  color: #ffffff;
+}
+
+.button-activated {
+  @extend .button;
+  padding: 10px;
+  background-color: rgba(#32b7d8, 0.8);
+}
+
+// .container {
+  .col {
+    $half-gutter-width: $gutter-width / 2;
+    float: left;
+    width: 100%;
+    margin: {
+      left: $half-gutter-width;
+      right: $half-gutter-width;
+    }
+    &:hover {
+      margin-top: 20px;
+    }
+
+    @media screen and (min-width: em(800px)) {
+      width: percentage( 421px / $page-width );
+    }
+  }
+// }
+
+
 /* .is-* module */
+
+
 /* 공식: width = column-width * count + gutter-wdith * (count - 1) */
+
+
 /*
   자바스크립트 함수
   function width(count, col_width, gutter_width) {
@@ -32,6 +90,7 @@
     return (col_width * count)+gutter_width * (count - 1);
   }
 */
+
 .col.is-1 {
   width: 100px;
 }
@@ -76,10 +135,13 @@
   width: 1080px;
 }
 
+
 /* offset module
    .is-offset-*
    .is-o-*
  */
+
+
 /*
   자바스크립트 함수
   function offset(count, col_width, gutter_width) {
@@ -88,6 +150,7 @@
     return (col_width * count) + (gutter_width * count) + gutter_width/2;
   }
 */
+
 .col.is-o-1,
 .col.is-offset-1 {
   margin-left: 110px;
@@ -143,8 +206,12 @@
   margin-left: 1110px;
 }
 
+
 /* .show-grid module */
+
+
 /* CSS3 Gradient Technique: Column Grid */
+
 .show-grid {
   position: relative;
 }
@@ -157,6 +224,6 @@
   left: 0;
   width: 100%;
   height: 200vh;
-  background: linear-gradient(180deg, transparent 20px, rgba(179, 30, 70, 0.5) 20px), linear-gradient(90deg, transparent 10px, rgba(254, 103, 148, 0.5) 10px, rgba(203, 1, 62, 0.5) 90px, transparent 90px);
+  background: linear-gradient( 180deg, transparent 20px, hsla(344, 71%, 41%, 0.5) 20px), linear-gradient( 90deg, transparent 10px, hsla(342, 99%, 70%, 0.5) 10px, hsla(342, 99%, 40%, 0.5) 90px, transparent 90px);
   background-size: 1px 21px, 100px 1px;
 }
